--- a/public/index.html
+++ b/public/index.html
@@ -1,130 +1,132 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
-        <meta charset="UTF-8">
+<head>
+    <meta charset="UTF-8">
 
-        <title>Awesome Medium Editor!</title>
+    <title>Awesome Medium Editor!</title>
+    <link rel="icon" href="src/img/faveicon.png" type="image/png" sizes="16x16">
 
-        <!-- CSS -->
-        <link rel="stylesheet" href="dist/css/demo.css">
-        <link rel="stylesheet" href="dist/css/font-awesome.css">
-        <link rel="stylesheet" href="dist/css/medium-editor.min.css">
-        <link rel="stylesheet" href="dist/css/themes/default.css" id="medium-editor-theme">
-        <link rel="stylesheet" href="dist/css/medium-editor-insert-plugin.min.css">
-        <link rel="stylesheet" href="dist/css/toastr.min.css">
-        <link rel="stylesheet" href="src/css/style.css">
-
-
-
-        <!-- JS -->
-        <script src="dist/js/jquery.min.js"></script>
-        <script src="dist/js/medium-editor.js"></script>
-        <script src="dist/js/handlebars.runtime.min.js"></script>
-        <script src="dist/js/medium-editor-insert-plugin.js"></script>
-        <script src="dist/js/to-markdown.js"></script>
-        <script src="dist/js/bootstrap.min.js" ></script>
-        <script src="dist/js/toastr.min.js"></script>
-        <script src="src/js/main.js"></script>
-
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <!-- CSS -->
+    <link rel="stylesheet" href="dist/css/demo.css">
+    <link rel="stylesheet" href="dist/css/font-awesome.css">
+    <link rel="stylesheet" href="dist/css/medium-editor.min.css">
+    <link rel="stylesheet" href="dist/css/themes/default.css" id="medium-editor-theme">
+    <link rel="stylesheet" href="dist/css/medium-editor-insert-plugin.min.css">
+    <link rel="stylesheet" href="dist/css/toastr.min.css">
+    <link rel="stylesheet" href="src/css/style.css">
 
 
-    </head>
 
-    <body>
+    <!-- JS -->
+    <script src="dist/js/jquery.min.js"></script>
+    <script src="dist/js/medium-editor.js"></script>
+    <script src="dist/js/handlebars.runtime.min.js"></script>
+    <script src="dist/js/medium-editor-insert-plugin.js"></script>
+    <script src="dist/js/to-markdown.js"></script>
+    <script src="dist/js/bootstrap.min.js" ></script>
+    <script src="dist/js/toastr.min.js"></script>
+    <script src="src/js/main.js"></script>
 
-        <div id="container">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-            <div class="jumbotron">
 
-                <div class="container">
+</head>
 
-                    <h1><i class="fa fa-magic" aria-hidden="true"></i> Awesome Medium Editor!</h1>
+<body>
 
-                    <p class="text-center">
-                        Created with JavaScript and <i class="fa fa-heart" aria-hidden="true"></i> from Iran. Browse the code on <a href="https://github.com/amlashi-sadra/awesome-medium-editor"><i class="fa fa-github" aria-hidden="true"></i>
-                        </span> GitHub</a>.
-                    </p>
+<div id="container">
 
-                    <did class="row"  align="center">
+    <div class="jumbotron">
 
-                        <div class="col-md-1"> </div>
+        <div class="container">
 
-                        <div class="bg-info col-md-4">
+            <h2 align="center"> <img src="src/img/ame-logo.png" width="300px" /> <br/> Awesome Medium Editor!</h2>
+            <hr style=""/>
 
-                            <div class="container" align="center">
+            <p class="text-center">
+                Created with JavaScript and <i class="fa fa-heart" aria-hidden="true"></i> from Iran. Browse the code on <a href="https://github.com/amlashi-sadra/awesome-medium-editor"><i class="fa fa-github" aria-hidden="true"></i>
+                </span> GitHub</a>.
+            </p>
 
-                                <h4>Select Direction</h4><br/>
+            <did class="row"  align="center">
 
-                                <button type="button" class="btn btn-warning" id="dir-ltr">LTR</button>
-                                <button type="button" class="btn btn-default" id="dir-rtl">RTL</button>
+                <div class="col-md-1"> </div>
 
-                            </div><br/>
+                <div class="bg-info col-md-4">
 
-                        </div>
+                    <div class="container" align="center">
 
-                        <div class="col-md-2"> </div>
+                        <h4>Select Direction</h4><br/>
 
-                        <div class="bg-success col-md-4">
+                        <button type="button" class="btn btn-warning" id="dir-ltr">LTR</button>
+                        <button type="button" class="btn btn-default" id="dir-rtl">RTL</button>
 
-                            <div class="container" align="center">
-
-                                <h4>Extract your extension</h4><br/>
-
-                                <button type="button" class="btn btn-success" id="extract-to-html">HTML</button>
-                                <button type="button" class="btn btn-success" id="extract-to-markdown">Mardown</button>
-<!--
-                                <button type="button" class="btn btn-success" id="extract-to-hexo">Hexo</button>
--->
-
-                            </div><br/>
-
-                        </div>
-
-                        <div class="col-md-1"> </div>
-
-                    </did>
+                    </div><br/>
 
                 </div>
 
-            </div>
+                <div class="col-md-2"> </div>
 
-            <div class="jumbotron">
-                <div class="container">
-                    <br/> <div class="editable" id="editable-container">  </div>
-                </div>
-            </div>
+                <div class="bg-success col-md-4">
 
-            <div class="jumbotron">
-                <div class="container">
+                    <div class="container" align="center">
 
-                    <section>
-                        <div align="center">
-                            <h2>Made with</h2>
+                        <h4>Extract as</h4><br/>
 
-                            <img src="src/img/heart-beating.gif" width="200px" height="150px"/><br/><br/>
+                        <button type="button" class="btn btn-success" id="extract-to-html">HTML</button>
+                        <button type="button" class="btn btn-success" id="extract-to-markdown">Mardown</button>
+                        <!--
+                                                        <button type="button" class="btn btn-success" id="extract-to-hexo">Hexo</button>
+                        -->
 
-                            <h4>by <a href="http://isapanah.com">Sadra</a> & <i>Powered by</i> <a href="https://yabwe.github.io/medium-editor/">Medium Editor</a>, <a href="https://github.com/domchristie/to-markdown">toMarkdown</a>, <a href="https://codeseven.github.io/toastr/">Toastr</a> + <a href="https://github.com/amlashi-sadra/awesome-medium-editor/graphs/contributors">people around the world</a>
-                            </h4>
-
-                            <a href="https://github.com/amlashi-sadra/awesome-medium-editor"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
-                            <a href="https://twitter.com/sadra_amlashi"><i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i></a>
-                            <a href="http://isapanah.com"><i class="fa fa-globe fa-3x" aria-hidden="true"></i></a>
-
-                        </div>
-                    </section>
+                    </div><br/>
 
                 </div>
 
-            </div>
+                <div class="col-md-1"> </div>
+
+            </did>
 
         </div>
 
-        <script src="src/js/ame-extensions.js"></script>
+    </div>
 
-    </body>
+    <div class="jumbotron">
+        <div class="container">
+            <br/> <div class="editable" id="editable-container">  </div>
+        </div>
+    </div>
+
+    <div class="jumbotron">
+        <div class="container">
+
+            <section>
+                <div align="center">
+                    <h2>Made with</h2>
+
+                    <img src="src/img/heart-beating.gif" width="200px" height="150px"/><br/><br/>
+
+                    <h4>by <a href="http://isapanah.com">Sadra</a> & <i>Powered by</i> <a href="https://yabwe.github.io/medium-editor/">Medium Editor</a>, <a href="https://github.com/domchristie/to-markdown">toMarkdown</a>, <a href="https://codeseven.github.io/toastr/">Toastr</a> + <a href="https://github.com/amlashi-sadra/awesome-medium-editor/graphs/contributors">people around the world</a>
+                    </h4>
+
+                    <a href="https://github.com/amlashi-sadra/awesome-medium-editor"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+                    <a href="https://twitter.com/sadra_amlashi"><i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i></a>
+                    <a href="http://isapanah.com"><i class="fa fa-globe fa-3x" aria-hidden="true"></i></a>
+
+                </div>
+            </section>
+
+        </div>
+
+    </div>
+
+</div>
+
+<script src="src/js/ame-extensions.js"></script>
+
+</body>
 
 </html>
